Added Procfile, updated index files, package, and added javascript

--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "url-shortener",
   "version": "1.0.0",
   "description": "A URL shortener that uses node, JQuery, and PostgreSQL, and express",
-  "main": "app.js",
+  "dependencies": {
+    "body-parser": "^1.15.1",
+    "express": "4.13.4",
+    "pg": "5.0.0"
+  },
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
