--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "express": "4.13.4",
     "pg": "5.0.0"
   },
+  "engines": {
+    "node": "4.4.5",
+    "npm": "3.9.5"
+  },
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "electrostaticfleece",
   "license": "ISC"
